# games101

./: .gitignore
Final/rwwtt/: .gitignore  README.md
Final/rwwtt/src/: CMakeLists.txt  global.hpp
PA1/framework/: README.md  rasterizer.cpp
PA2/framework/: README.md
PA3/framework/: README.md  main.cpp  rasterizer.cpp
PA5/Code/: CMakeLists.txt  Triangle.hpp
PA6/Assignment6/: BVH.cpp  BVH.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp
PA6/Assignment6/images/: armadillo-naive.ppm
PA7/Assignment7/: Bounds3.hpp  CMakeLists.txt  README.md  Renderer.cpp  Sphere.hpp  Triangle.hpp  main.cpp
PA7/Assignment7/images/: 1.ppm
assignments/1/framework/: CMakeLists.txt  main.cpp
assignments/2/framework/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
assignments/3/framework/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
assignments/4/code/: README.md  main.cpp
assignments/5/Code/: README.md  Renderer.cpp  Triangle.hpp
assignments/5/Code/images/: binary.ppm
assignments/6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  README.md  Renderer.cpp  Triangle.hpp  main.cpp
assignments/7/Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  global.hpp  main.cpp
assignments/7/Assignment7/images/: 2.ppm  (+3 more)
assignments/8/framework/: README.md
assignments/Assignment3/framework/: CMakeLists.txt  main.cpp  rasterizer.cpp
final/: handscript.md
final/rwwtt/: CMakeLists.txt  main.cpp
final/rwwtt/shaders/: Makefile  icecream.frag  shader.vert
final/rwwtt/src/: Application.cpp  Application.hpp
(+3 files in other folders)
